istio/sorryPod/envoyFilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sorry-pod
  # if config root namespace (istio-config) is set to namespace,
  # this manifest is applied to all namespaces. 
  namespace: sorry-pod # as defined in meshConfig resource.
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
