istio/sorryPod/fault_injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sorry-pod
  # if config root namespace (istio-config) is set to namespace,
  # this manifest is applied to all namespaces. 
  #namespace: sorry-pod # as defined in meshConfig resource.
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 80
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        name: "envoy.filters.network.http_connection_manager"
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          local_reply_config:
            mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 503
              body:
                inline_string: |
                  {
                    "not allowed"
                  }
              body_format_override:
                text_format: "<h1>%LOCAL_REPLY_BODY% %RESPONSE_CODE% %REQ(:path)%</h1>"
                content_type: "text/html; charset=UTF-8"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fault-injection
  #namespace: sorry-pod
spec:
  hosts:
  - httpd-service
  http:
  - route:
    - destination:
        host: ratings.prod.svc.cluster.local
        subset: v1
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 503
